--- a/src/component/YGMAR/YGMAR.css
+++ b/src/component/YGMAR/YGMAR.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
 }
-.quthubLP {
+.ygmarlp {
   top: 0;
   left: 0;
   position: absolute;
@@ -19,7 +19,7 @@
 
 /* yogaintroduce */
 @media only screen and (max-width: 768px) {
-  .quthubLP {
+  .ygmarlp {
     flex-direction: column;
   }
 }
