--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -1,11 +1,11 @@
 .navbar {
-  background-color: #808000;
-  z-index: 0;
+  background-color: yellow;
+  z-index: 1;
 }
 .logoLP {
   width: 50px;
   height: 50px;
-  color: white;
+  color: blue;
 }
 .nav-item {
   width: 190px;
