--- a/src/component/MenuUtama/MenuUtama.css
+++ b/src/component/MenuUtama/MenuUtama.css
@@ -18,7 +18,7 @@
     text-align: center;
   }
   .card-title {
-    font-size: small;
+    font-size: x-small;
     height: 40px;
   }
   .card-text {
