--- a/src/component/MenuUtama/MenuUtama.css
+++ b/src/component/MenuUtama/MenuUtama.css
@@ -20,7 +20,7 @@
   .card-title {
     font-size: x-small;
     height: 40px;
-    font-weight: lighter;
+    font-weight: bolder;
   }
   .card-text {
     height: 50px;
