--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,33 +1,20 @@
 .footer {
   z-index: -10;
+  display: flex;
+  flex-direction: row;
+  margin: 50px;
+  padding-left: 30px;
+  padding-bottom: 30px;
 }
 .yogaleft {
   width: 60%;
   margin-left: 120px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.yogaprifileintro {
-  padding-top: 12px;
-}
-.yogabutton {
-  margin: 0px, 24px;
-  margin-top: 48px;
-}
-.yogabuttonlink {
-  display: flex;
   flex-direction: column;
+  text-align: center;
 }
 .yogaright {
   width: 40%;
-}
-.fotoyoga {
-  width: 100%;
-  filter: drop-shadow(-20px 15px 18px grey);
-}
-.mobileintropic {
-  display: none;
 }
 .yogalink {
   display: flex;
@@ -52,40 +39,20 @@
 
 /* yogaintroduce */
 @media only screen and (max-width: 768px) {
-  .yogaleft {
-    width: 90%;
-    margin: 24px;
+  .footer {
+    width: 100%;
+    margin: 0px;
     margin-top: 12px;
-  }
-  .yogaprofile {
-    margin-left: -24px;
-    margin-right: 24px;
-  }
-  .yogaright {
-    display: none;
-  }
-  .yogabutton {
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    margin-top: 40px;
-  }
-  .mobileintro {
-    display: flex;
-    margin-top: 12px;
-  }
-  .desktopintro {
-    display: none;
-  }
-  .yogaprofile {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    text-align: center;
     align-items: center;
   }
-  .mobileintropic {
+  .yogaleft {
+    width: 90%;
+    margin: 0px;
+    padding-top: 20px;
     display: flex;
-    width: 80px;
-    filter: drop-shadow(-15px 5px 10px grey);
   }
 }
