--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,9 +1,6 @@
 .LandingPage {
-  background-color: #808000;
-}
-.loaderLP {
-  background-color: #808000;
+  background-color: yellow;
 }
 .ygmar {
-  background-color: #808000;
+  background-color: yellow;
 }
